--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@ android.nonTransitiveRClass=true
 kotlin.incremental.useClasspathSnapshot=true
 # 可选，启用构建报告
 #kotlin.build.report.output=file
+#强制不增量
+#android.experimental.legacyTransform.forceNonIncremental=true
