--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id 'com.android.application' version '7.3.0' apply false
-    id 'com.android.library' version '7.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
+    id 'com.android.application' version '7.4.0' apply false
+    id 'com.android.library' version '7.4.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id 'cn.therouter' version '1.1.1' apply false
     id "com.yzq.dependency-manager" apply true
     id "com.github.ben-manes.versions" version('0.44.0') apply(false)
@@ -44,7 +44,7 @@ subprojects { project ->
     }
 }
 
-
-
+//查看依赖关系
+//        ./gradlew app:dependencies > deps.txt  --configuration wandoujiaPrdReleaseRuntimeClasspath
 
 
