refactor 适配分区存储，新增分区存储demo

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,6 +134,9 @@ dependencies {
     implementation(AndroidOfficial.coordinatorlayout)
     implementation(AndroidOfficial.splashscreen)
     implementation(AndroidOfficial.recyclerview)
+    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     kapt AndroidOfficial.roomCompiler
     kapt TheRouter.theRouterApt
