--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,9 +134,6 @@ dependencies {
     implementation(AndroidOfficial.coordinatorlayout)
     implementation(AndroidOfficial.splashscreen)
     implementation(AndroidOfficial.recyclerview)
-    implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     kapt AndroidOfficial.roomCompiler
     kapt TheRouter.theRouterApt
@@ -147,6 +144,8 @@ dependencies {
     implementation ThirdParty.bannerViewPager
 
     implementation ThirdParty.xeonBsDiff
+
+    implementation(ThirdParty.coil)
 
 
     implementation project(':gao-de-map')
