--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ pluginManagement {
     repositories {
         google()
         mavenCentral()
+
         maven {
             url 'https://maven.aliyun.com/repository/public/'
         }
@@ -20,6 +21,9 @@ pluginManagement {
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+        maven {
+            url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
+        }
         google()
         mavenCentral()
         maven {
