--- a/network-status/build.gradle
+++ b/network-status/build.gradle
@@ -10,6 +10,7 @@ plugins {
 
 
 android {
+    namespace 'com.yzq.network_status'
     compileSdk AndroidConfig.compileSdkVersion
 
     defaultConfig {
@@ -19,11 +20,6 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
 
-
-    compileOptions {
-        sourceCompatibility(JavaVersion.VERSION_11)
-        targetCompatibility(JavaVersion.VERSION_11)
-    }
 
     buildTypes {
         release {
@@ -36,7 +32,15 @@ android {
     lint {
         abortOnError false
     }
-    namespace 'com.yzq.network_status'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
+
+
 }
 
 
