--- a/base/build.gradle
+++ b/base/build.gradle
@@ -9,31 +9,28 @@ plugins {
 
 
 android {
+    namespace 'com.yzq.base'
     compileSdk AndroidConfig.compileSdkVersion
-
     defaultConfig {
         minSdk AndroidConfig.minSdkVersion
         targetSdk AndroidConfig.targetSdkVersion
         multiDexEnabled AndroidConfig.multiDexEnabled
         vectorDrawables.useSupportLibrary = true
     }
-
-
-    compileOptions {
-        sourceCompatibility(JavaVersion.VERSION_11)
-        targetCompatibility(JavaVersion.VERSION_11)
-    }
-
     buildTypes {
         release {
             consumerProguardFiles 'proguard-rules.pro'
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
         }
-
     }
-
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
     buildFeatures {
         dataBinding true
         viewBinding true
@@ -41,7 +38,6 @@ android {
     lint {
         abortOnError false
     }
-    namespace 'com.yzq.base'
 
 
 }
