--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,10 @@
  * 该处主要用来申明插件的版本，apply false表示不立即应用，而是自己手动应用
  */
 plugins {
-    id 'com.android.application' version "7.4.1" apply false
-    id 'com.android.library' version '7.4.1' apply false
-    id 'org.jetbrains.kotlin.android' version "${kotlinVersion}" apply false
-    id 'cn.therouter' version "1.1.2" apply false
+    id 'com.android.application' version '8.0.0' apply false
+    id 'com.android.library' version '8.0.0' apply false
+    id 'org.jetbrains.kotlin.android' version "1.8.10" apply false
+    id 'cn.therouter' version "1.1.4-beta1" apply false
     id "com.yzq.dependency-manager" apply true  //管理依赖库的插件
     id "com.github.ben-manes.versions" version('0.46.0') apply(false)
 }
