--- a/common/build.gradle
+++ b/common/build.gradle
@@ -12,6 +12,7 @@ plugins {
 
 
 android {
+    namespace 'com.yzq.common'
     compileSdk AndroidConfig.compileSdkVersion
 
     defaultConfig {
@@ -28,20 +29,19 @@ android {
     }
 
 
-    compileOptions {
-        sourceCompatibility(JavaVersion.VERSION_11)
-        targetCompatibility(JavaVersion.VERSION_11)
-    }
-
     buildTypes {
         release {
             consumerProguardFiles 'proguard-rules.pro'
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-
         }
-
     }
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
 
     buildFeatures {
         dataBinding true
@@ -50,8 +50,6 @@ android {
     lint {
         abortOnError false
     }
-    namespace 'com.yzq.common'
-
 
 }
 
