--- a/coroutine/build.gradle
+++ b/coroutine/build.gradle
@@ -17,6 +17,14 @@ android {
         targetSdk AndroidConfig.targetSdkVersion
 
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
+
 
     buildTypes {
         release {
@@ -24,13 +32,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility(JavaVersion.VERSION_11)
-        targetCompatibility(JavaVersion.VERSION_11)
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+
+
 }
 
 dependencies {
