--- a/dependency-manager-plugin/build.gradle
+++ b/dependency-manager-plugin/build.gradle
@@ -18,21 +18,15 @@ repositories {
 
 dependencies {
     implementation gradleApi()
-
 }
 
-
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "11"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "11"
-    }
-}
-
+//compileOptions {
+//    sourceCompatibility JavaVersion.VERSION_17
+//    targetCompatibility JavaVersion.VERSION_17
+//}
+//kotlinOptions {
+//    jvmTarget = '17'
+//}
 
 gradlePlugin {
     plugins {
