--- a/img/build.gradle
+++ b/img/build.gradle
@@ -12,6 +12,7 @@ plugins {
 
 
 android {
+    namespace 'com.yzq.img'
     compileSdk AndroidConfig.compileSdkVersion
 
     defaultConfig {
@@ -21,11 +22,6 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
 
-
-    compileOptions {
-        sourceCompatibility(JavaVersion.VERSION_11)
-        targetCompatibility(JavaVersion.VERSION_11)
-    }
 
     buildTypes {
         release {
@@ -38,7 +34,13 @@ android {
     lint {
         abortOnError false
     }
-    namespace 'com.yzq.img'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
 
 
 }
