--- a/widget/build.gradle
+++ b/widget/build.gradle
@@ -10,6 +10,7 @@ plugins {
 
 
 android {
+    namespace 'com.yzq.widget'
     compileSdk AndroidConfig.compileSdkVersion
 
     defaultConfig {
@@ -18,11 +19,6 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
 
-
-    compileOptions {
-        sourceCompatibility(JavaVersion.VERSION_11)
-        targetCompatibility(JavaVersion.VERSION_11)
-    }
 
     buildTypes {
         release {
@@ -39,7 +35,13 @@ android {
     lint {
         abortOnError false
     }
-    namespace 'com.yzq.widget'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
 
 
 }
