--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,27 +1,133 @@
 [versions]
 
+#AGP的版本
 androidGradlePlugin = "8.0.0"
-theRouter = "1.1.4-beta1"
+material = "1.8.0"
+#AndroidX
+androidxAppcompat = "1.6.1"
+androidxActivityKtx = "1.7.0"
+androidxFragmentKtx = "1.5.6"
+androidxCollectionKtx = "1.2.0"
+androidxLifecycle = "2.6.1"
+androidxVectordrawable = "1.1.0"
+androidxConstraintlayout = "2.1.4"
+androidxAnnotation = "1.6.0"
+androidxMultidex = "2.0.1"
+androidxCore = "1.9.0"
+androidxCoreSplashscreen = "1.0.0"
+androidxCoordinatorlayout = "1.2.0"
+androidxSwiperefreshlayout = "1.1.0"
+androidxRecyclerview = "1.3.0"
+androidxViewpager2 = "1.1.0-beta01"
+androidxExifinterface = "1.3.6"
+androidxRoom = "2.5.1"
+
+#kotlin
 kotlin = "1.8.10"
 ksp = "1.8.10-1.0.9"
+kotlinxCoroutines = "1.6.4"
+kotlinxSerializationJson = "1.4.1"
+
+#三方库
+theRouter = "1.1.4-beta1"
 benManesVersion = "0.46.0"
-room = "2.5.1"
+okhttp = "4.10.0"
+retrofit = "2.9.0"
+retrofitKotlinxSerializationJson = "0.8.0"
+
+moshiKotlin = "1.14.0"
+utilcodex = "1.31.1"
+xxPermissions = "18.0"
+mmkv = "1.2.15"
+progressManager = "1.5.0"
+appStartFaster = "2.2.0"
+zxingYzq = "2.2.9"
+bannerViewPager = "3.5.8"
+jsoup = "1.15.4"
+xeonBsDiff = "1.0.2"
+brv = "1.4.1"
+flexboxLayout = "3.0.0"
+leakcanaryAndroid = "2.10"
+coil = "2.3.0"
+photoView = "2.3.0"
+materialDialog = "3.3.0"
+dateTimePicker = "0.6.2"
 
 [libraries]
+
+google-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+#androidX
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidxAppcompat" }
+androidx-activity-ktx = { group = "androidx.activity", name = "activity-ktx", version.ref = "androidxActivityKtx" }
+androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "androidxFragmentKtx" }
+androidx-collection-ktx = { group = "androidx.collection", name = "collection-ktx", version.ref = "androidxCollectionKtx" }
+androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "androidxLifecycle" }
+androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "androidxLifecycle" }
+#Lifecycles only (without ViewModel or LiveData)
+androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
+androidx-vectordrawable = { group = "androidx.vectordrawable", name = "vectordrawable", version.ref = "androidxVectordrawable" }
+androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidxConstraintlayout" }
+androidx-coordinatorlayout = { group = "androidx.coordinatorlayout", name = "coordinatorlayout", version.ref = "androidxCoordinatorlayout" }
+androidx-annotation = { group = "androidx.annotation", name = "annotation", version.ref = "androidxAnnotation" }
+androidx-multidex = { group = "androidx.multidex", name = "multidex", version.ref = "androidxMultidex" }
+androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidxCore" }
+androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "androidxCoreSplashscreen" }
+androidx-swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version.ref = "androidxSwiperefreshlayout" }
+androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "androidxRecyclerview" }
+androidx-viewpager2 = { group = "androidx.viewpager2", name = "viewpager2", version.ref = "androidxViewpager2" }
+androidx-exifinterface = { group = "androidx.exifinterface", name = "exifinterface", version.ref = "androidxExifinterface" }
+
+#kotlin
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlin" }
 kotlin-stdlib-jdk8 = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk8", version.ref = "kotlin" }
+kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
+kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
+kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 
 
+#三方库
+okhttp-core = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
+okhttp-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
+retrofit-core = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+retrofit-converter-moshi = { group = "com.squareup.retrofit2", name = "converter-moshi", version.ref = "retrofit" }
+retrofit-kotlin-serialization = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version.ref = "retrofitKotlinxSerializationJson" }
+utilcodex = { group = "com.blankj", name = "utilcodex", version.ref = "utilcodex" }
+xxPermissions = { group = "com.github.getActivity", name = "XXPermissions", version.ref = "xxPermissions" }
+mmkv = { group = "com.tencent", name = "mmkv", version.ref = "mmkv" }
+moshiKotlin = { group = "com.squareup.moshi", name = "moshi-kotlin", version.ref = "moshiKotlin" }
+progressManager = { group = "com.github.JessYanCoding", name = "ProgressManager", version.ref = "progressManager" }
+appStartFaster = { group = "com.github.aiceking", name = "AppStartFaster", version.ref = "appStartFaster" }
+zxingYzq = { group = "com.github.yuzhiqiang1993", name = "zxing", version.ref = "zxingYzq" }
+bannerViewPager = { group = "com.github.zhpanvip", name = "BannerViewPager", version.ref = "bannerViewPager" }
+jsoup = { group = "org.jsoup", name = "jsoup", version.ref = "jsoup" }
+xeonBsDiff = { group = "com.xeonyu", name = "bsdiff", version.ref = "xeonBsDiff" }
+brv = { group = "com.github.liangjingkanji", name = "BRV", version.ref = "brv" }
+flexbox-layout = { group = "com.github.google", name = "flexbox-layout", version.ref = "flexboxLayout" }
+leakcanary-android = { group = "com.squareup.leakcanary", name = "leakcanary-android", version.ref = "leakcanaryAndroid" }
+coil = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
+photoView = { group = "com.github.chrisbanes", name = "PhotoView", version.ref = "photoView" }
+materialDialog-core = { group = "com.afollestad.material-dialogs", name = "core", version.ref = "materialDialog" }
+materialDialog-input = { group = "com.afollestad.material-dialogs", name = "input", version.ref = "materialDialog" }
+materialDialog-bottomsheets = { group = "com.afollestad.material-dialogs", name = "bottomsheets", version.ref = "materialDialog" }
+materialDialog-lifecycle = { group = "com.afollestad.material-dialogs", name = "lifecycle", version.ref = "materialDialog" }
+dateTimePicker = { group = "com.github.loperSeven", name = "DateTimePicker", version.ref = "dateTimePicker" }
 
-# Dependencies of the included build-manager
+
+#build-manager 依赖管理插件的依赖
+#android Gradle插件
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
+#kotlin Gradle插件
 kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+#KSP
 ksp-gradlePlugin = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
+#therouter
 theRouter = { group = "cn.therouter", name = "router", version.ref = "theRouter" }
 theRouterApt = { group = "cn.therouter", name = "apt", version.ref = "theRouter" }
-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+#room
+androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "androidxRoom" }
+androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "androidxRoom" }
+androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "androidxRoom" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
@@ -31,4 +137,5 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 theRouter = { id = "cn.therouter", version.ref = "theRouter" }
+#检查依赖库是否有新版本
 benManesVersion = { id = "com.github.ben-manes.versions", version.ref = "benManesVersion" }
