feat 新增CordovaWebContainer依赖及使用

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,9 +30,9 @@ compileSdk = "33"
 
 #/**
 #* Min sdk version
-#* App支持的最低版本 Android 5.1
+#* App支持的最低版本 Android 6.0
 #*/
-minSdk = "21"
+minSdk = "23"
 
 #/**
 #* Target sdk version
@@ -86,6 +86,7 @@ mmkv = "1.2.16"
 progressManager = "1.5.0"
 appStartFaster = "2.2.0"
 zxingYzq = "2.2.9"
+cordovaWebContainer = "1.0.1"
 bannerViewPager = "3.5.8"
 jsoup = "1.15.4"
 xeonBsDiff = "1.0.2"
@@ -146,6 +147,8 @@ zxingYzq = { group = "com.github.yuzhiqiang1993", name = "zxing", version.ref = 
 bannerViewPager = { group = "com.github.zhpanvip", name = "BannerViewPager", version.ref = "bannerViewPager" }
 jsoup = { group = "org.jsoup", name = "jsoup", version.ref = "jsoup" }
 xeonBsDiff = { group = "com.xeonyu", name = "bsdiff", version.ref = "xeonBsDiff" }
+cordova-webcontainer = { group = "com.xeonyu", name = "cordova-webcontainer", version.ref = "cordovaWebContainer" }
+
 brv = { group = "com.github.liangjingkanji", name = "BRV", version.ref = "brv" }
 flexbox-layout = { group = "com.github.google", name = "flexbox-layout", version.ref = "flexboxLayout" }
 leakcanary-android = { group = "com.squareup.leakcanary", name = "leakcanary-android", version.ref = "leakcanaryAndroid" }
