--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@
 #* 10.10.10对应101010
 #*
 #*/
+
 versionCode = "10001"
 versionName = "1.0.1"
 
@@ -50,7 +51,7 @@ material = "1.9.0"
 #AndroidX
 androidxAppcompat = "1.6.1"
 androidxActivityKtx = "1.7.2"
-androidxFragmentKtx = "1.5.7"
+androidxFragmentKtx = "1.6.0"
 androidxCollectionKtx = "1.2.0"
 androidxLifecycle = "2.6.1"
 androidxVectordrawable = "1.1.0"
@@ -97,6 +98,16 @@ coil = "2.3.0"
 photoView = "2.3.0"
 materialDialog = "3.3.0"
 dateTimePicker = "0.6.2"
+#阿里EMAS
+alicloudAndroidApm = "1.1.1.0-open"
+alicloudAndroidBeacon = "1.0.8"
+alicloudAndroidHaAdapter = "1.1.5.5-open"
+alicloudAndroidHaCrashreporter = "1.3.0"
+alicloudAndroidPush = "3.8.3"
+alicloudAndroidTlog = "1.1.4.5-open"
+alicloudAndroidUt = "5.4.5"
+alicloudAndroidUtdid = "2.6.0"
+alicloudAndroidUtils = "2.0.0"
 
 [libraries]
 
@@ -159,6 +170,16 @@ materialDialog-input = { group = "com.afollestad.material-dialogs", name = "inpu
 materialDialog-bottomsheets = { group = "com.afollestad.material-dialogs", name = "bottomsheets", version.ref = "materialDialog" }
 materialDialog-lifecycle = { group = "com.afollestad.material-dialogs", name = "lifecycle", version.ref = "materialDialog" }
 dateTimePicker = { group = "com.github.loperSeven", name = "DateTimePicker", version.ref = "dateTimePicker" }
+#阿里emas
+alicloud-android-apm = { module = "com.aliyun.ams:alicloud-android-apm", version.ref = "alicloudAndroidApm" }
+alicloud-android-beacon = { module = "com.aliyun.ams:alicloud-android-beacon", version.ref = "alicloudAndroidBeacon" }
+alicloud-android-ha-adapter = { module = "com.aliyun.ams:alicloud-android-ha-adapter", version.ref = "alicloudAndroidHaAdapter" }
+alicloud-android-ha-crashreporter = { module = "com.aliyun.ams:alicloud-android-ha-crashreporter", version.ref = "alicloudAndroidHaCrashreporter" }
+alicloud-android-push = { module = "com.aliyun.ams:alicloud-android-push", version.ref = "alicloudAndroidPush" }
+alicloud-android-tlog = { module = "com.aliyun.ams:alicloud-android-tlog", version.ref = "alicloudAndroidTlog" }
+alicloud-android-ut = { module = "com.aliyun.ams:alicloud-android-ut", version.ref = "alicloudAndroidUt" }
+alicloud-android-utdid = { module = "com.aliyun.ams:alicloud-android-utdid", version.ref = "alicloudAndroidUtdid" }
+alicloud-android-utils = { module = "com.aliyun.ams:alicloud-android-utils", version.ref = "alicloudAndroidUtils" }
 
 
 #build-manager 依赖管理插件的依赖
