--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,25 +12,28 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" /><!-- 兼容低版本 Android10 及以上适配分区存储 -->
+        tools:ignore="ScopedStorage" /> <!-- 兼容低版本 Android10 及以上适配分区存储 -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" /> <!-- 前台服务权限 -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" /> <!-- 通知栏权限 -->
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="true" /><!-- 表示如果用户设备没有摄像头是否允许安装 由required字段控制 false表示可以安装 -->
-
+        android:required="true" /> <!-- 表示如果用户设备没有摄像头是否允许安装 由required字段控制 false表示可以安装 -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:name=".App"
         android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:extractNativeLibs="true"
         android:icon="@mipmap/ic_launcher"
         android:label="Xeon-${CHANNEL}-${ENV}"
         android:largeHeap="true"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.XeonYuTheme"
@@ -38,9 +41,11 @@
         tools:ignore="GoogleAppIndexingWarning,UnusedAttribute,LockedOrientationActivity"
         tools:replace="android:allowBackup,android:label,android:theme">
         <activity
-            android:name=".ui.activity.LottieActivity"
+            android:name=".ui.activity.AsrActivity"
             android:exported="false" />
-        <!-- 自定义一些元数据 -->
+        <activity
+            android:name=".ui.activity.LottieActivity"
+            android:exported="false" /> <!-- 自定义一些元数据 -->
         <meta-data
             android:name="META_CHANNEL"
             android:value="${META_CHANNEL_VALUE}" /> <!-- 适配分区存储 -->
