--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@
 #*
 #*/
 
+
 versionCode = "10001"
 versionName = "1.0.1"
 
@@ -65,7 +66,7 @@ androidxSwiperefreshlayout = "1.1.0"
 androidxRecyclerview = "1.3.0"
 androidxViewpager2 = "1.1.0-beta02"
 androidxExifinterface = "1.3.6"
-androidxRoom = "2.5.1"
+androidxRoom = "2.5.2"
 
 #kotlin
 kotlin = "1.8.22"
@@ -98,6 +99,8 @@ coil = "2.4.0"
 photoView = "2.3.0"
 materialDialog = "3.3.0"
 dateTimePicker = "0.6.3"
+threetenabp = "1.4.6"
+
 #阿里EMAS
 alicloudAndroidApm = "1.1.1.0-open"
 alicloudAndroidBeacon = "1.0.8"
@@ -148,6 +151,7 @@ retrofit-core = { group = "com.squareup.retrofit2", name = "retrofit", version.r
 retrofit-converter-moshi = { group = "com.squareup.retrofit2", name = "converter-moshi", version.ref = "retrofit" }
 retrofit-kotlin-serialization = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version.ref = "retrofitKotlinxSerializationJson" }
 lottie = { group = "com.airbnb.android", name = "lottie", version.ref = "lottie" }
+threetenabp = { module = "com.jakewharton.threetenabp:threetenabp", version.ref = "threetenabp" }
 utilcodex = { group = "com.blankj", name = "utilcodex", version.ref = "utilcodex" }
 xxPermissions = { group = "com.github.getActivity", name = "XXPermissions", version.ref = "xxPermissions" }
 mmkv = { group = "com.tencent", name = "mmkv", version.ref = "mmkv" }
