--- a/gradle/libs.versions_backup.toml
+++ b/gradle/libs.versions_backup.toml
@@ -1,28 +1,4 @@
 [versions]
-#Android默认配置
-#/**
-#* Version code
-#* 软件版本号的形式是major.minor.maintenance
-#* major是主版本号，⼀般在软件有重⼤升级时增长
-#* minor是次版本号，⼀般在软件有新功能时增长
-#* maintenance是维护版本，⼀般在软件有主要的问题修复后增长
-#* 正式版本: major.minor.maintenance----1.0.0
-#* 1.0.0对应   10000
-#* 1.0.1对应   10001
-#* 1.0.10对应  10010
-#* 1.1.99对应  10199
-#* 1.10.0对应  11000
-#* 1.12.9对应  11209
-#* 1.12.10对应 11210
-#* 10.0.0对应  100000
-#* 10.1.1对应  100101
-#* 10.10.10对应101010
-#*
-#*/
-
-
-#versionCode = "10001"
-#versionName = "1.0.1"
 
 #/**
 #* Compile sdk version
@@ -43,9 +19,8 @@ minSdk = "23"
 # Android 13
 #*/
 targetSdk = "33"
-
 #AGP的版本
-androidGradlePlugin = "8.0.2"
+agp = "8.0.2"
 material = "1.9.0"
 #AndroidX
 androidxAppcompat = "1.6.1"
@@ -75,6 +50,8 @@ kotlinxSerializationJson = "1.5.1"
 #三方库
 theRouter = "1.2.0-beta2"
 benManesVersion = "0.46.0"
+vanniktechPublish = "0.25.3"
+buildManagerVersion = "0.0.1"
 okhttp = "4.11.0"
 retrofit = "2.9.0"
 retrofitKotlinxSerializationJson = "1.0.0"
@@ -112,6 +89,10 @@ alicloudAndroidUtils = "2.0.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
+
+#高德map
+gaodeLocation = "6.3.0"
+
 
 [libraries]
 
@@ -159,12 +140,8 @@ mmkv = { group = "com.tencent", name = "mmkv", version.ref = "mmkv" }
 moshiKotlin = { group = "com.squareup.moshi", name = "moshi-kotlin", version.ref = "moshiKotlin" }
 progressManager = { group = "com.github.JessYanCoding", name = "ProgressManager", version.ref = "progressManager" }
 appStartFaster = { group = "com.github.aiceking", name = "AppStartFaster", version.ref = "appStartFaster" }
-zxingYzq = { group = "com.github.yuzhiqiang1993", name = "zxing", version.ref = "zxingYzq" }
 bannerViewPager = { group = "com.github.zhpanvip", name = "BannerViewPager", version.ref = "bannerViewPager" }
 jsoup = { group = "org.jsoup", name = "jsoup", version.ref = "jsoup" }
-xeonBsDiff = { group = "com.xeonyu", name = "bsdiff", version.ref = "xeonBsDiff" }
-cordova-webcontainer = { group = "com.xeonyu", name = "cordova-webcontainer", version.ref = "cordovaWebContainer" }
-
 brv = { group = "com.github.liangjingkanji", name = "BRV", version.ref = "brv" }
 flexbox-layout = { group = "com.github.google", name = "flexbox-layout", version.ref = "flexboxLayout" }
 leakcanary-android = { group = "com.squareup.leakcanary", name = "leakcanary-android", version.ref = "leakcanaryAndroid" }
@@ -175,6 +152,13 @@ materialDialog-input = { group = "com.afollestad.material-dialogs", name = "inpu
 materialDialog-bottomsheets = { group = "com.afollestad.material-dialogs", name = "bottomsheets", version.ref = "materialDialog" }
 materialDialog-lifecycle = { group = "com.afollestad.material-dialogs", name = "lifecycle", version.ref = "materialDialog" }
 dateTimePicker = { group = "com.github.loperSeven", name = "DateTimePicker", version.ref = "dateTimePicker" }
+
+#我自己的开源库
+xeonyu-bsdiff = { group = "com.xeonyu", name = "bsdiff", version.ref = "xeonBsDiff" }
+xeonyu-zxing = { group = "com.github.yuzhiqiang1993", name = "zxing", version.ref = "zxingYzq" }
+xeonyu-cordova-webcontainer = { group = "com.xeonyu", name = "cordova-webcontainer", version.ref = "cordovaWebContainer" }
+
+
 #阿里emas
 alicloud-android-apm = { module = "com.aliyun.ams:alicloud-android-apm", version.ref = "alicloudAndroidApm" }
 alicloud-android-beacon = { module = "com.aliyun.ams:alicloud-android-beacon", version.ref = "alicloudAndroidBeacon" }
@@ -186,35 +170,51 @@ alicloud-android-ut = { module = "com.aliyun.ams:alicloud-android-ut", version.r
 alicloud-android-utdid = { module = "com.aliyun.ams:alicloud-android-utdid", version.ref = "alicloudAndroidUtdid" }
 alicloud-android-utils = { module = "com.aliyun.ams:alicloud-android-utils", version.ref = "alicloudAndroidUtils" }
 
+#高德
+gaode-location = { group = "com.amap.api", name = "location", version.ref = "gaodeLocation" }
+
 
 #build-manager 依赖管理插件的依赖
+
 #android Gradle插件
-android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
+android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
 #kotlin Gradle插件
 kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 #KSP
 ksp-gradlePlugin = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
 #therouter
-theRouter = { group = "cn.therouter", name = "router", version.ref = "theRouter" }
-theRouterApt = { group = "cn.therouter", name = "apt", version.ref = "theRouter" }
+therouter = { group = "cn.therouter", name = "router", version.ref = "theRouter" }
+therouter-apt = { group = "cn.therouter", name = "apt", version.ref = "theRouter" }
 #room
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "androidxRoom" }
 androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "androidxRoom" }
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "androidxRoom" }
-#test
+
+
+
+#测试
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 
+
+[bundles]
+room = ["androidx-room-ktx", "androidx-room-runtime"]
+
 [plugins]
-android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
-android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
+android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
-theRouter = { id = "cn.therouter", version.ref = "theRouter" }
+therouter = { id = "cn.therouter", version.ref = "theRouter" }
 #检查依赖库是否有新版本
 benManesVersion = { id = "com.github.ben-manes.versions", version.ref = "benManesVersion" }
-
-[bundles]
+#版本发布三方插件
+vanniktechPublish = { id = "com.vanniktech.maven.publish", version.ref = "vanniktechPublish" }
+#自定义的插件
+xeonyu-application = { id = "com.xeonyu.plugin.application", version.ref = "buildManagerVersion" }
+xeonyu-library = { id = "com.xeonyu.plugin.library", version.ref = "buildManagerVersion" }
+#xeonyu-room = { id = "com.xeonyu.plugin.room", version.ref = "buildManagerVersion" }
+#xeonyu-therouter = { id = "com.xeonyu.plugin.therouter", version.ref = "buildManagerVersion" }
